Fix 100vh/w mobile browser clipping bug

--- a/extras/themes/spooky/spooky.css
+++ b/extras/themes/spooky/spooky.css
@@ -62,8 +62,8 @@ html:not([data-setting-backgroundTheme="spooky"]) .showWhenFullTheme {
 	position: fixed;
 	top: 0;
 	left: 0;
-	width: 100vw;
-	height: 100vh;
+	width: 100%;
+	height: 100%;
 	object-fit: contain;
 	object-position: center;
 	z-index: 999999999999999999999999;
