--- a/src/themes.css
+++ b/src/themes.css
@@ -121,8 +121,8 @@ input, select, textarea {
 	position: fixed;
 	top: 0;
 	left: 0;
-	width: 100vw;
-	height: 100vh;
+	width: 100%;
+	height: 100%;
 	display: none;
 }
 
